--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdparty/yaml-cpp"]
 	path = 3rdparty/yaml-cpp
-	url = https://github.com/jbeder/yaml-cpp.git
+	url = https://gitee.com/mirrors/yaml-cpp.git
