feat: v1.5.0.23, $请求时的回调函数允许无参，$请求后增加cancel功能，日志库添加占位符

--- a/Examples/SimpleBoot/qrc/config/application.yml
+++ b/Examples/SimpleBoot/qrc/config/application.yml
@@ -2,4 +2,9 @@ boot:
     application: 
         requestor: 
             maxThreadCount: 10
+        stateMachine: 
+            paths: ["./BootTest.scxml"]
+        log: 
+            xmlPath: "../../Examples/LogTest/logqt.xml"
+            flag: "debug"
         
