feat: 1.5.0.24, widget ioc和日志的配置添加到quickboot

--- a/Examples/SimpleBoot/qrc/config/application.yml
+++ b/Examples/SimpleBoot/qrc/config/application.yml
@@ -5,6 +5,6 @@ boot:
         stateMachine: 
             paths: ["./BootTest.scxml"]
         log: 
-            xmlPath: "../../Examples/LogTest/logqt.xml"
+            xmlPaths: ["../../Examples/LogTest/logqt.xml"]
             flag: "debug"
         
