feat: v2.1.0.8，完善McMetaType，新增单元测试模块

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ if(NOT (CMAKE_BUILD_TYPE STREQUAL "Debug"))
 endif()
 
 option(BUILD_EXAMPLES "Build examples" ON)
+option(BUILD_TESTS "Build tests. depend qtest" ON)
 option(BUILD_STATIC "Build static" OFF)
 option(INSTALL_TO_QT "Install output to qt location" OFF)
 
@@ -91,4 +92,7 @@ add_subdirectory(McCore)
 add_subdirectory(McIoc)
 if(BUILD_EXAMPLES)
     add_subdirectory(Examples)
+endif()
+if(BUILD_TESTS)
+    add_subdirectory(Tests)
 endif()
