--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -5,4 +5,6 @@ find_package(Qt6 COMPONENTS Test REQUIRED)
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_BINARY_DIR}/McCore)
 
+add_subdirectory(SimpleLibrary)
 add_subdirectory(CoreTest)
+add_subdirectory(IocTest)
