--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -6,5 +6,6 @@ include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_BINARY_DIR}/McCore)
 
 add_subdirectory(SimpleLibrary)
+add_subdirectory(SimplePlugin)
 add_subdirectory(CoreTest)
 add_subdirectory(IocTest)
