--- a/Tests/SimplePlugin/CMakeLists.txt
+++ b/Tests/SimplePlugin/CMakeLists.txt
@@ -16,3 +16,8 @@ add_library(${PROJECT_NAME} SHARED
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core McCore)
+
+if (NOT MSVC)
+    set_target_properties (${PROJECT_NAME} PROPERTIES PREFIX "")
+    set_target_properties (${PROJECT_NAME} PROPERTIES SUFFIX ".dll")
+endif ()
