feat: v2.1.0.16，完成注解读取

--- a/McIoc/CMakeLists.txt
+++ b/McIoc/CMakeLists.txt
@@ -7,15 +7,15 @@ set(PROJECT_HEADERS
     McIocMacroGlobal.h
     McIocConstantGlobal.h
     McIocGlobal.h
-    McGlobal.h
     Utils/IMcBeanBuildable.h
     BeanFactory/IMcBeanFactory.h
     BeanFactory/IMcBeanBuilderRegistry.h
-    BeanFactory/IMcBeanReferenceResolver.h
     BeanFactory/IMcConfigurableBeanFactory.h
     BeanFactory/Impl/McAbstractBeanFactory.h
     BeanFactory/Impl/McDefaultBeanFactory.h
+    BeanFactory/Impl/McResolverBeanFactory.h
     BeanBuilder/IMcBeanBuilder.h
+    BeanBuilder/IMcBeanReferenceResolver.h
     BeanBuilder/IMcCustomPlaceholder.h
     BeanBuilder/Impl/McBeanReference.h
     BeanBuilder/Impl/McBeanPlaceholder.h
@@ -35,12 +35,22 @@ set(PROJECT_HEADERS
     BeanBuilderReader/IMcBeanBuilderReader.h
     BeanBuilderReader/Impl/McAbstractBeanBuilderReader.h
     BeanBuilderReader/Impl/McXmlBeanBuilderReader.h
+    BeanBuilderReader/Impl/McAnnotationBeanDefinitionReader.h
+    ApplicationContext/IMcRefreshableApplicationContext.h
+    ApplicationContext/IMcApplicationContext.h
+    ApplicationContext/IMcReadableApplicationContext.h
+    ApplicationContext/Impl/McAbstractApplicationContext.h
+    ApplicationContext/Impl/McReadableApplicationContext.h
+    ApplicationContext/Impl/McXmlApplicationContext.h
+    ApplicationContext/Impl/McLocalPathApplicationContext.h
+    ApplicationContext/Impl/McAnnotationApplicationContext.h
 )
 
 set(PROJECT_SOURCES
     McIocGlobal.cpp
     BeanFactory/Impl/McAbstractBeanFactory.cpp
     BeanFactory/Impl/McDefaultBeanFactory.cpp
+    BeanFactory/Impl/McResolverBeanFactory.cpp
     BeanBuilder/Impl/McAbstractBeanBuilder.cpp
     BeanBuilder/Impl/McObjectBeanBuilder.cpp
     BeanBuilder/Impl/McObjectClassBeanBuilder.cpp
@@ -54,6 +64,12 @@ set(PROJECT_SOURCES
     BeanBuilder/Impl/McSimpleBeanBuilder.cpp
     BeanBuilderReader/Impl/McAbstractBeanBuilderReader.cpp
     BeanBuilderReader/Impl/McXmlBeanBuilderReader.cpp
+    BeanBuilderReader/Impl/McAnnotationBeanDefinitionReader.cpp
+    ApplicationContext/Impl/McAbstractApplicationContext.cpp
+    ApplicationContext/Impl/McReadableApplicationContext.cpp
+    ApplicationContext/Impl/McXmlApplicationContext.cpp
+    ApplicationContext/Impl/McLocalPathApplicationContext.cpp
+    ApplicationContext/Impl/McAnnotationApplicationContext.cpp
 )
 
 add_library(${PROJECT_NAME} ${MC_BUILD_TYPE}
