--- a/Tests/IocTest/CMakeLists.txt
+++ b/Tests/IocTest/CMakeLists.txt
@@ -3,6 +3,8 @@ project(IocTest)
 set(PROJECT_HEADERS
     BeanFactoryTest.h
     BeanReaderTest.h
+    XmlApplicationContextTest.h
+    AnnotationApplicationContextTest.h
     IObjectTest.h
 )
 
@@ -10,6 +12,8 @@ set(PROJECT_SOURCES
     main.cpp
     BeanFactoryTest.cpp
     BeanReaderTest.cpp
+    XmlApplicationContextTest.cpp
+    AnnotationApplicationContextTest.cpp
 )
 
 set(PROJECT_RESOURCES
