feat: v2.1.0.19，完成XML Builder单元测试

--- a/Tests/IocTest/CMakeLists.txt
+++ b/Tests/IocTest/CMakeLists.txt
@@ -5,6 +5,7 @@ set(PROJECT_HEADERS
     BeanReaderTest.h
     XmlApplicationContextTest.h
     AnnotationApplicationContextTest.h
+    XmlBuilder.h
     IObjectTest.h
 )
 
@@ -14,6 +15,7 @@ set(PROJECT_SOURCES
     BeanReaderTest.cpp
     XmlApplicationContextTest.cpp
     AnnotationApplicationContextTest.cpp
+    XmlBuilder.cpp
 )
 
 set(PROJECT_RESOURCES
