feat: v2.1.0.20，完善测试用例

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -2,8 +2,13 @@ project(Examples)
 
 find_package(Qt6 COMPONENTS Widgets REQUIRED)
 
+set(CMAKE_DEBUG_POSTFIX "")
+
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_BINARY_DIR}/McCore)
 
 add_subdirectory(CoreExample)
 add_subdirectory(IocExample)
+add_subdirectory(LibraryExample)
+add_subdirectory(PluginExample)
+add_subdirectory(PluginExample2)
