--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -2,6 +2,8 @@ project(Tests)
 
 find_package(Qt6 COMPONENTS Test REQUIRED)
 
+set(CMAKE_DEBUG_POSTFIX "")
+
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_BINARY_DIR}/McCore)
 
