feat: 2.1.0.22，完成事件分发器任意类型接收功能，完成json和QT对象的互转工具，完善测试样例

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ endif()
 
 add_subdirectory(McCore)
 add_subdirectory(McIoc)
+add_subdirectory(McLog)
 if(BUILD_EXAMPLES)
     add_subdirectory(Examples)
 endif()
