--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(Examples)
 
-find_package(Qt6 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 COMPONENTS Widgets Concurrent REQUIRED)
 
 set(CMAKE_DEBUG_POSTFIX "")
 
@@ -9,6 +9,7 @@ include_directories(${CMAKE_BINARY_DIR}/McCore)
 
 add_subdirectory(CoreExample)
 add_subdirectory(IocExample)
+add_subdirectory(LogExample)
 add_subdirectory(LibraryExample)
 add_subdirectory(PluginExample)
 add_subdirectory(PluginExample2)
