feat: v2.1.0.26，完成WidgetIoc功能，并完成其单元测试和样例

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(${CMAKE_BINARY_DIR}/McCore)
 add_subdirectory(CoreExample)
 add_subdirectory(IocExample)
 add_subdirectory(LogExample)
+add_subdirectory(WidgetExample)
 add_subdirectory(LibraryExample)
 add_subdirectory(PluginExample)
 add_subdirectory(PluginExample2)
