--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(SimpleLibrary)
 add_subdirectory(SimplePlugin)
 add_subdirectory(CoreTest)
 add_subdirectory(IocTest)
+add_subdirectory(WidgetTest)
