feat: v2.1.0.27，添加QuickBoot项目，增加Callback、Cancel、Pause和Progress工具

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ add_subdirectory(McCore)
 add_subdirectory(McIoc)
 add_subdirectory(McLog)
 add_subdirectory(McWidget)
+add_subdirectory(McQuickBoot)
 if(BUILD_EXAMPLES)
     add_subdirectory(Examples)
 endif()
