--- a/Examples/CoreExample/CMakeLists.txt
+++ b/Examples/CoreExample/CMakeLists.txt
@@ -22,4 +22,4 @@ add_executable(${PROJECT_NAME}
     ${PROJECT_FORMS}
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets McCore)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets McCore)
