--- a/Examples/PluginExample/CMakeLists.txt
+++ b/Examples/PluginExample/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(${PROJECT_NAME} SHARED
     ${PROJECT_SOURCES}
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core McCore McIoc)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Core McCore McIoc)
 
 if (MINGW)
     set_target_properties (${PROJECT_NAME} PROPERTIES PREFIX "")
