--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(Tests)
 
-find_package(Qt6 COMPONENTS Test REQUIRED)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Test)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Test)
 
 set(CMAKE_DEBUG_POSTFIX "")
 
