--- a/Tests/IocTest/CMakeLists.txt
+++ b/Tests/IocTest/CMakeLists.txt
@@ -28,5 +28,5 @@ add_executable(${PROJECT_NAME}
     ${PROJECT_RESOURCES}
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Test
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Test
     McCore McIoc)
